重构项目，删兜底，改数据库
